[package]
name = "apisql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql-parser = "7.0.2"
rusqlite = { version = "0.31.0", features = ["bundled", "vtab"] }
reqwest = { version = "0.11.24", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
fallible-iterator = "0.3"
anyhow = "1.0.80"

[features]
loadable_extension = ["rusqlite/loadable_extension"]

[lib]
name = "apisql"
path = "src/lib.rs"
crate-type = ["cdylib"]
required-features = ["loadable_extension"]
